--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,41 @@ body > pre { display: none }
   position: absolute
 }
 
+#console-container {
+  top: inherit;
+  bottom: 0;
+  height: 200px;
+  background-color: #f5f5f5;
+  z-index: 999;
+  overflow: hidden;
+  border-top: 1px solid rgba(29, 31, 33, 0.8)
+}
+
+#console-container #console-toolbar {
+  background-color: #fff;
+  padding: 15px;
+  display: flex;
+  height: 8%;
+  align-items: center;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2)
+}
+
+#console-container #console-toolbar #console-header {
+  flex: 4;
+  margin: 0;
+}
+
+#console-container #console-toolbar #console-button {
+  flex: 1;
+}
+
+#console-container #console {
+  padding: 15px;
+  overflow: hidden;
+  overflow-y: scroll;
+  height: 60%;
+}
+
 #howto, #share, .packagejson { padding: 20px; position: absolute; right: 0; background: white; width: 40%; overflow: auto; border-left: 1px solid #eee; border-bottom: 1px solid #eee; }
 .packagejson { clear: both; }
 .packagejson .tagsinput .tag:hover { padding: 6px 13px 6px 19px; }
