--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ a { cursor: pointer; cursor: hand; }
   right: 0;
   bottom: 0;
 }
-.hidden { visibility: hidden; display: none; }
+.hidden { visibility: hidden; }
 
 .tagsinput { height: auto; }
 .tag a { color: white; text-decoration: none; }
@@ -114,26 +114,13 @@ body > pre { display: none }
 /* codemirror */
 .CodeMirror { font-size:12px; }
 
-.tagline { margin-top: 9px; float: left;}
-
-.npm {
-  background: url(../img/npm.png);
-  background-size: 38px 15px;
-  width: 38px;
-  height: 15px;
-  display: inline-block;
-  position: relative;
-  top: 4px;
-}
-
-.browserify {
-  background: url(../img/browserify.png);
-  background-size: 75px 22.5px;
-  width: 75px;
-  height: 22.5px;
-  display: inline-block;
-  position: relative;
-  top: 7px;
+.tagline {
+  margin-top: 9px;
+  float: left;
+  display: flex;
+  align-items: center;
+  flex: 1;
+  margin: 0;
 }
 
 .view-icon {
@@ -149,6 +136,20 @@ body > pre { display: none }
   background-image: none;
 }
 
+.requirebin {
+  width: 150px;
+}
+
+.tagline > a {
+  flex: 1;
+}
+
+.toolbar {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  height: 50px;
+}
 
 .require-bin-editor .CodeMirror .errorLine { background: rgba(255,0,0,0.25); }
 
@@ -161,27 +162,38 @@ body > pre { display: none }
 }
 
 #console-container {
+  position: absolute;
   top: inherit;
   bottom: 0;
+  right: 0;
+  left: 0;
   height: 200px;
   background-color: #f5f5f5;
   z-index: 999;
   overflow: hidden;
-  border-top: 1px solid rgba(29, 31, 33, 0.8)
+  border-top: 1px solid rgba(29, 31, 33, 0.8);
+  border-right: 1px solid rgba(29, 31, 33, 0.8);
+  transition: height .3s ease-in-out;
+}
+
+#console-container.minimize {
+  height:45px
 }
 
 #console-container #console-toolbar {
-  background-color: #fff;
-  padding: 15px;
+  background-color: rgb(109, 110, 113);
   display: flex;
-  height: 8%;
+  height: 45px;
   align-items: center;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2)
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);
+  padding: 0 15px;
+  cursor: pointer;
 }
 
 #console-container #console-toolbar #console-header {
   flex: 4;
   margin: 0;
+  color: #fff;
 }
 
 #console-container #console-toolbar #console-button {
@@ -201,7 +213,17 @@ body > pre { display: none }
 .packagejson h6 { margin-top: 0; }
 #howto ul { list-style-type: none; }
 #howto p { margin-bottom: 10px }
-.logo { padding: 0px 6px 0 1px; margin-top: 5px; float: left; background-size: 40px 200px; width: 200px; }
+.logo {
+  padding: 0 0 0 24px;
+  margin-top: 5px;
+  background-size: 40px 200px;
+  width: 200px;
+  display: flex;
+  align-items: center;
+}
+.logo > img {
+  width: 35px;
+}
 .attribution { margin: 20px 0 0 0; float: left; font-size: 12px; }
 #controls { width: 50%; top: 0; right: 0; left: initial;}
 #container {
