--- a/flatui/css/flat-ui.css
+++ b/flatui/css/flat-ui.css
@@ -222,7 +222,7 @@ h6 {
 
 .btn {
   border: none;
-  background: #34495e;
+  background: #78AAD6;
   color: white;
   font-size: 16.5px;
   text-decoration: none;
@@ -236,7 +236,7 @@ h6 {
   transition: 0.25s;
   -webkit-backface-visibility: hidden; }
   .btn:hover, .btn:focus {
-    background-color: #4e6d8d;
+    background-color: #8CC2F2;
     color: white;
     -webkit-transition: 0.25s;
     -moz-transition: 0.25s;
@@ -244,7 +244,7 @@ h6 {
     transition: 0.25s;
     -webkit-backface-visibility: hidden; }
   .btn:active, .btn.active {
-    background-color: #2c3e50;
+    background-color: #76D4D6;
     color: rgba(255, 255, 255, 0.75);
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
@@ -256,11 +256,11 @@ h6 {
     padding-bottom: 12px;
     padding-top: 13px; }
   .btn.btn-primary {
-    background-color: #1abc9c; }
+    background-color: #76D4D6; }
     .btn.btn-primary:hover, .btn.btn-primary:focus {
-      background-color: #2fe2bf; }
+      background-color: #81e6e8; }
     .btn.btn-primary:active, .btn.btn-primary.active {
-      background-color: #16a085; }
+      background-color: #66b6b7; }
   .btn.btn-info {
     background-color: #3498db; }
     .btn.btn-info:hover, .btn.btn-info:focus {
@@ -640,7 +640,7 @@ h6 {
   outline: none; }
 
 .dk_toggle {
-  background-color: #1abc9c;
+  background-color: #76D4D6;
   color: white;
   border-radius: 6px;
   overflow: hidden;
@@ -653,17 +653,17 @@ h6 {
   transition: 0.25s;
   -webkit-backface-visibility: hidden; }
   .dk_toggle:hover, .dk_toggle:focus, .dk_focus .dk_toggle {
-    background-color: #2fe2bf;
+    background-color: #81e6e8;
     color: white;
     outline: none; }
   .dk_toggle:active {
-    background-color: #16a085;
+    background-color: #66b6b7;
     outline: none; }
     .dk_toggle:active .select-icon {
       border-left-color: transparent; }
 
 .select-icon {
-  background: #1abc9c url("../images/select/toggle.png") no-repeat right center;
+  background: #76D4D6 url("../images/select/toggle.png") no-repeat right center;
   border-left: 2px solid rgba(52, 73, 94, 0.15);
   border-radius: 0 6px 6px 0;
   height: 100%;
@@ -680,9 +680,9 @@ h6 {
 .dk_open {
   z-index: 10; }
   .dk_open .dk_toggle {
-    background-color: #1abc9c; }
+    background-color: #76D4D6; }
     .dk_open .dk_toggle .select-icon {
-      background-color: #16a085;
+      background-color: #66b6b7;
       border-left-color: transparent; }
 
 .dk_options {
@@ -710,13 +710,13 @@ h6 {
     padding: 5px 9px;
     text-decoration: none; }
     .dk_options a:hover {
-      background-color: #1abc9c; }
+      background-color: #76D4D6; }
 
 .dk_option_current a {
-  background-color: #1abc9c; }
+  background-color: #76D4D6; }
 
 .dk_options_inner {
-  background-color: #34495e;
+  background-color: #78AAD6;
   border-radius: 5px;
   margin: 0;
   max-height: 244px;
