--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,7 @@ body > pre { display: none }
   align-items: center;
   position: absolute;
   height: 50px;
+  width: 100%;
 }
 
 .require-bin-editor .CodeMirror .errorLine { background: rgba(255,0,0,0.25); }
