--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,7 @@ body > pre { display: none }
 }
 .logo > img {
   width: 35px;
+  margin-right: 5px;
 }
 .attribution { margin: 20px 0 0 0; float: left; font-size: 12px; }
 #controls { width: 50%; top: 0; right: 0; left: initial;}
