--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
   outline: none;
 }
 
+iframe {
+  box-shadow: 0 0 5px 2px rgba(0,0,0,0.2);
+}
+
 body {
   font: 300 14px "Helvetica Neue", Helvetica, Arial;
 }
@@ -84,7 +88,11 @@ a { cursor: pointer; cursor: hand; }
 .tagsinput { height: auto; }
 .tag a { color: white; text-decoration: none; }
 
-.require-bin-editor, #play { z-index: 1; border-top: 1px solid #eee; border-right: 1px solid #eee; }
+.require-bin-editor, #play { z-index: 1; border-top: 1px solid #eee; }
+
+.require-bin-editor {
+  border-right: 1px solid #eee;
+}
 
 .require-bin-editor .CodeMirror {
 
@@ -159,13 +167,22 @@ body > pre { display: none }
   position: absolute;
   height: 50px;
   width: 100%;
+  min-width: 1000px;
 }
 
-.require-bin-editor .CodeMirror .errorLine { background: rgba(255,0,0,0.25); }
+.require-bin-editor .CodeMirror .errorLine { background: rgba(255,0,0,0.25);}
 
-#play { overflow: hidden }
+#play { overflow: hidden; padding: 20px; }
 #shareTextarea { font-size: 12px; }
 #shareInstructions p { margin: 5px 0; }
+
+#preview {
+  margin-left: 10px;
+}
+
+#preview .btn {
+  padding: 9px 14px 10px 14px;
+}
 
 #run-btn {
   background-color: #78AAD6;
