--- a/flatui/css/flat-ui.css
+++ b/flatui/css/flat-ui.css
@@ -250,7 +250,7 @@ h6 {
     -moz-box-shadow: none;
     box-shadow: none; }
   .btn.disabled, .btn[disabled] {
-    background-color: #95a5a6;
+    background-color: #aaa;
     color: white; }
     .btn.btn-primary.disabled:hover {
       background-color: #aaa;
