--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ body > pre { display: none }
   padding: 10px 14px;
 }
 
-#run-btn {
+.btn.btn-primary.primary {
   background-color: #78AAD6;
 }
 
