--- a/css/style.css
+++ b/css/style.css
@@ -412,3 +412,39 @@ body > pre { display: none }
   margin: 0;
   margin-left: 10px;
 }
+
+#function-search {
+  position: absolute;
+  display: none;
+  top: 64px;
+  margin: 0 auto;
+  z-index: 999;
+  left: calc(25% - 120px);
+  text-align: center;
+  padding: 10px;
+  border: 2px solid #dce4ec;
+  background: #f5f5f5;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+#function-search .results-wrapper {
+  bottom: 0;
+  right: 0;
+  left: 0;
+  overflow-y: auto;
+  max-height: 60vh;
+  box-sizing: border-box;
+}
+
+#function-search .results-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+#function-search .results .list-group-item {
+  cursor: pointer;
+}
+
+#function-search .results .list-group-item:not(.active):hover {
+  background-color: #e5e5e5;
+}
